--- a/css/cards.css
+++ b/css/cards.css
@@ -4,13 +4,13 @@ html{
 }
 
 .container{
-    background-color: #7A918D;
+    background-color: #1C3144;
     text-align: center;
     border-radius: 5vw;
 }
 
 
-.match{
+/* .match{
     border-style:solid;
     border-radius: 10vw;
     width:90vw;
@@ -18,7 +18,7 @@ html{
     margin:auto; 
     margin-bottom:5vh;
     background-color: aquamarine;
-}
+} */
 
 
 .matchem_row{
@@ -43,7 +43,17 @@ html{
     width:50%;
     font-size: 2vh;
     /* flex-grow:1; */
-    height:6vh;}
+    height:6vh;
+}
+
+.matchem_row .unselectable{
+    /* border-style: dashed; */
+    border-radius:20vh; 
+    width:50%;
+    font-size: 2vh;
+    /* flex-grow:1; */
+    height:6vh;
+}
 
 .question{
     color:black;
@@ -72,15 +82,25 @@ html{
 
 }
 
-
-
 .picked{
     background-color:black;
     color:red;
 }
+
 .correct{
     background-color:green;
-    color:darkgreen;
+    color:white;
 }
 
 #demo_zone{margin-top: 2vh;}
+
+.active_button{
+    background-color:#9C0D38;
+    color:#F6F8FF;
+}
+
+#scores{
+    color:white;
+    font-size: 2.3vh;
+    margin-bottom:2vh;
+}
