--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,6 @@
     width:86vw;
     margin:auto;
     border-style:solid;
-    display:flex;
-    flex-direction: column;
-
-
 }
 
 .hidden{
@@ -37,19 +33,26 @@
     display:flex;
     flex-direction:column;
     margin-bottom:3vh;
+    border-radius: 2vh;
 
 }
 
 
 .area{
-    height:80vh;
+    min-height:80vh;
 }
 
-
+#main_buttons .active_button{
+    background-color:#9C0D38;
+    color:#F6F8FF;
+}
 
 .inputs{
     color:black;
+    width:40vw;
     border-style:solid;
+    margin:auto;
+    display:block;
 }
 
 select:invalid{
@@ -66,7 +69,17 @@ select:invalid{
     margin: 0 0 0 0;
 }
 
+.menu{
+    width:18vw;
+    height:6vh;
+    color:#F6F8FF;
+    border-style:solid;
+    background-color: #F25F5C;
+    border-radius: 5vh;
+    /* display:flex;
+    flex-direction:row; */
 
+}
 #set_select{
     width:70vw;
     font-size: 2vh;
@@ -75,3 +88,36 @@ select:invalid{
 #set_name{
     width:70vw;
 }
+
+.danger{
+    background-color:#9C0D38;
+    border-color:red;
+}
+
+.remove{
+   background-color: transparent;
+   color: white;
+   border-style:none;
+   /* border-right: 50vw solid transparent ;
+   border-left: 50vw solid transparent ;
+   border-bottom: 20vw solid black ; */
+}
+
+#additional_options{
+    position:fixed;
+    top:15vh;
+    left:20vw;
+    height:75vh;
+    background-color: white;
+    width:60vw;
+}
+
+
+.text_area{
+    width:95%;
+    height:50vh;
+    margin-top:2vh;
+
+}
+
+#question{display:block;}
